app/assets/stylesheets/components/_card.scss
.card {
  overflow: hidden;
  background: white;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  margin-bottom: 40px;
  min-width: 200px;
}

.card:hover {
  text-decoration: none;
}

.card-right {
  border-radius: 0px 200px;
}

.card-right > img {
  border-radius: 0px 200px;
}

.card-left {
  border-radius: 200px 0px;
  text-align: left;
  text-decoration: none;
}

.card-left > img {
  border-radius: 200px 0px;
}

.card-right {
  border-radius: 0px 200px;
  text-align: right;
  text-decoration: none;
}

.card > img {
  height: 200px;
  width: 100%;
  object-fit: cover;
}

.card-links {
  text-decoration: none;
  color: #2A6355;
  overflow-wrap: break-word;
}

.card-links p {
  font-size:12px;
}

.card-links:hover {
  text-decoration: none;
  color: #3BD4CD;
}

.card h2 {
  font-size: 16px;
  font-weight: bold;
  margin: 0;
}

.card p {
  opacity: .7;
  margin: 0;
}

#small-leaf {
  width: 400px;
  max-width: 100%;
}

#medium-leaf {
  width: 450px;
  max-width:100%;
}

.card-infos {
  padding: 12px;
  text-decoration: none;
}

.card-links:hover {
  text-decoration: none;
}

.card-infos .card-user {
  position: absolute;
  right: 16px;
  top: -20px;
  width: 40px;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: #4AD3CC;
}

.card:hover .overlay {
  opacity: 1;
}

.about-card:hover .overlay {
  opacity: 1;
  background-color: #2A6355;
}

.text-overlay {
  color: white;
  text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
  font-size: 15px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.about-card {
  overflow: hidden;
  background: #2A6355;
  color: white;
  border-radius: 2px 2px 4px;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
}

.about-text {
  padding: 20px;
}

// .section {
//   background: white;                         /* White background */
//   padding: 30px;                             /* Internal space */
//   border-radius: 4px;                        /* Small radius */
//   box-shadow: 0 10px 30px rgba(0,0,0,.1);
//   margin-top: 100px;
// }

